Upcoming:
- Fixed a problem where the updated proxy would break instantly by hand and not drop anything
- Added ctrl-c/ctrl-v support for copy/pasting channels
- Added support for RFTools Control with a new opcode to enable/disable channels
- Added another opcode to test if a color mask is true

1.7.6:
- API improvements to allow other mods to add connectors to a controller
- Needs McJtyLib 3.1.0
- Support for COFH RF API is removed. Only Forge Energy is supported now
- Various cleanups

1.7.5:
- Fixed a bug with wireless channels not storing the owner correctly
- New feature to copy/paste channels and connectors!

1.7.4:
- WARNING: Do not load any worlds with XNet 1.7.3 or earlier if you last saved them with XNet 1.7.4 or later!
- Joseph fixed log warnings due to tile entities being registered with names like "minecraft:xnet_facade" instead of "xnet:facade".
- Fixed a problem with the redstone proxy blocks being breakable by hand (and not giving any drops)
- Fixed a possible crash with the wireless routers when used in different (unloaded) dimensions
- Made sure that the baked models for cables never return null for the particle texture
- Fixed a problem with the router not showing multiple local channels of the same type

1.7.3:
- Fixed a few baked models that didn't test for null state. This fixes XNet for recent versions of Forge

1.7.2:
- Fixed a very stupid bug in the item handling when there were multiple extraction points and some of these were disabled by color mask and/or redstone mode. As soon as it tested one of those extraction points it would ignore all remaining extraction points if the conditions didn't match

1.7.1:
- Reduced power consumption of the wireless router. It was a bit too much. Changed the name of the config so that everyone will get the new values
- New feature to extract a specific amount of items per tick

1.7.0:
- Made compatible with the latest McJtyLib (3.0.0)